--- a/Week7.ipynb
+++ b/Week7.ipynb
@@ -189,7 +189,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Load the penguins dataset from seaborn\n",
+        "penguins = sns.load_dataset('penguins')\n",
+        "\n",
+        "# Display basic info about the dataset\n",
+        "print(\"Dataset loaded successfully!\")\n",
+        "print(f\"Total penguins: {len(penguins)}\")\n",
+        "\n",
+        "# Set figure size for better visibility\n",
+        "plt.figure(figsize=(8, 5))\n",
+        "\n",
+        "# Create scatter plot (manually colored)\n",
+        "plt.scatter(penguins[\"bill_length_mm\"],\n",
+        "            penguins[\"body_mass_g\"],\n",
+        "            color=\"dodgerblue\",      # Blue color for data points\n",
+        "            alpha=0.6,               # Transparency (0.6 = 60% opaque)\n",
+        "            edgecolors=\"black\",      # Black outline around points\n",
+        "            label=\"Data Points\")\n",
+        "\n",
+        "# Add regression line using seaborn\n",
+        "sns.regplot(data=penguins,\n",
+        "            x=\"bill_length_mm\",\n",
+        "            y=\"body_mass_g\",\n",
+        "            scatter=False,           # Don't plot scatter points (we already did)\n",
+        "            color=\"red\",             # Red color for regression line\n",
+        "            ci=None,                 # Don't show confidence interval\n",
+        "            label=\"Regression Line\")\n",
+        "\n",
+        "# Add labels and title\n",
+        "plt.xlabel(\"Bill Length (mm)\", fontsize=12)\n",
+        "plt.ylabel(\"Body Mass (g)\", fontsize=12)\n",
+        "plt.title(\"Penguin Bill Length vs. Body Mass with Regression\", fontsize=14)\n",
+        "\n",
+        "# Add legend to identify what each element represents\n",
+        "plt.legend()\n",
+        "\n",
+        "# Display the plot\n",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "WxJnfIfX7me9"
       },
@@ -227,6 +269,75 @@
       ],
       "metadata": {
         "id": "4z5ilq7tHBEI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Load the penguins dataset from seaborn\n",
+        "penguins = sns.load_dataset('penguins')\n",
+        "\n",
+        "# Check what species we have\n",
+        "print(\"Penguin species in dataset:\")\n",
+        "print(penguins['species'].unique())\n",
+        "print()\n",
+        "\n",
+        "# Create a figure with 1 row and 3 columns of subplots\n",
+        "fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
+        "\n",
+        "# Get the three species names\n",
+        "species_list = penguins['species'].unique()\n",
+        "\n",
+        "# Loop through each species and create a subplot\n",
+        "for i, species in enumerate(species_list):\n",
+        "\n",
+        "    # Filter data for current species\n",
+        "    species_data = penguins[penguins['species'] == species]\n",
+        "\n",
+        "    print(f\"Plotting {species} penguins: {len(species_data)} individuals\")\n",
+        "\n",
+        "    # Plot on the i-th subplot (axes[i])\n",
+        "    # Create scatter plot\n",
+        "    axes[i].scatter(species_data[\"bill_length_mm\"],\n",
+        "                    species_data[\"bill_depth_mm\"],\n",
+        "                    color=\"dodgerblue\",\n",
+        "                    alpha=0.6,\n",
+        "                    edgecolors=\"black\",\n",
+        "                    label=\"Data Points\")\n",
+        "\n",
+        "    # Add regression line\n",
+        "    sns.regplot(data=species_data,\n",
+        "                x=\"bill_length_mm\",\n",
+        "                y=\"bill_depth_mm\",\n",
+        "                scatter=False,        # Don't plot scatter points again\n",
+        "                color=\"red\",\n",
+        "                ci=None,\n",
+        "                label=\"Regression Line\",\n",
+        "                ax=axes[i])           # IMPORTANT: specify which subplot to use\n",
+        "\n",
+        "    # Add labels and title for this subplot\n",
+        "    axes[i].set_xlabel(\"Bill Length (mm)\", fontsize=11)\n",
+        "    axes[i].set_ylabel(\"Bill Depth (mm)\", fontsize=11)\n",
+        "    axes[i].set_title(f\"{species} Penguins\", fontsize=13, fontweight='bold')\n",
+        "    axes[i].legend()\n",
+        "\n",
+        "# Add an overall title for the entire figure\n",
+        "fig.suptitle(\"Bill Length vs. Bill Depth by Species\", fontsize=16, fontweight='bold', y=1.02)\n",
+        "\n",
+        "# Adjust spacing between subplots\n",
+        "plt.tight_layout()\n",
+        "\n",
+        "# Display the plot\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "Xcur4R0r77hk"
       },
       "execution_count": null,
       "outputs": []
@@ -367,6 +478,118 @@
       "metadata": {
         "id": "nvx3IMbPIMC5"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Load the penguins dataset from seaborn\n",
+        "penguins = sns.load_dataset('penguins')\n",
+        "\n",
+        "print(\"Creating a 2x2 grid with 4 different visualizations...\")\n",
+        "print()\n",
+        "\n",
+        "# ============================================================================\n",
+        "# CREATE THE 2x2 SUBPLOT GRID\n",
+        "# ============================================================================\n",
+        "\n",
+        "# Create a figure with 2 rows and 2 columns of subplots\n",
+        "fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
+        "\n",
+        "# axes is now a 2D array:\n",
+        "# axes[0, 0] = top-left\n",
+        "# axes[0, 1] = top-right\n",
+        "# axes[1, 0] = bottom-left\n",
+        "# axes[1, 1] = bottom-right\n",
+        "\n",
+        "# ============================================================================\n",
+        "# TOP-LEFT: Bar plot of body mass by species\n",
+        "# ============================================================================\n",
+        "print(\"1. Creating bar plot (body mass by species)...\")\n",
+        "\n",
+        "sns.barplot(x='species',\n",
+        "            y='body_mass_g',\n",
+        "            data=penguins,\n",
+        "            ax=axes[0, 0],\n",
+        "            palette='Set2')\n",
+        "\n",
+        "axes[0, 0].set_xlabel('Species', fontsize=11)\n",
+        "axes[0, 0].set_ylabel('Body Mass (g)', fontsize=11)\n",
+        "axes[0, 0].set_title('Average Body Mass by Species', fontsize=12, fontweight='bold')\n",
+        "\n",
+        "# ============================================================================\n",
+        "# TOP-RIGHT: Scatter plot of bill length vs bill depth (colored by species)\n",
+        "# ============================================================================\n",
+        "print(\"2. Creating scatter plot (bill length vs bill depth by species)...\")\n",
+        "\n",
+        "sns.scatterplot(data=penguins,\n",
+        "                x='bill_length_mm',\n",
+        "                y='bill_depth_mm',\n",
+        "                hue='species',           # Color by species\n",
+        "                palette='Set2',\n",
+        "                s=100,                   # Size of points\n",
+        "                alpha=0.7,\n",
+        "                ax=axes[0, 1])\n",
+        "\n",
+        "axes[0, 1].set_xlabel('Bill Length (mm)', fontsize=11)\n",
+        "axes[0, 1].set_ylabel('Bill Depth (mm)', fontsize=11)\n",
+        "axes[0, 1].set_title('Bill Length vs Bill Depth by Species', fontsize=12, fontweight='bold')\n",
+        "axes[0, 1].legend(title='Species')\n",
+        "\n",
+        "# ============================================================================\n",
+        "# BOTTOM-LEFT: Histogram of flipper length (separated by species)\n",
+        "# ============================================================================\n",
+        "print(\"3. Creating histogram (flipper length distribution by species)...\")\n",
+        "\n",
+        "sns.histplot(data=penguins,\n",
+        "             x='flipper_length_mm',\n",
+        "             hue='species',              # Separate by species\n",
+        "             palette='Set2',\n",
+        "             multiple='stack',           # Stack the histograms\n",
+        "             bins=20,                    # Number of bins\n",
+        "             ax=axes[1, 0])\n",
+        "\n",
+        "axes[1, 0].set_xlabel('Flipper Length (mm)', fontsize=11)\n",
+        "axes[1, 0].set_ylabel('Count', fontsize=11)\n",
+        "axes[1, 0].set_title('Flipper Length Distribution by Species', fontsize=12, fontweight='bold')\n",
+        "axes[1, 0].legend(title='Species')\n",
+        "\n",
+        "# ============================================================================\n",
+        "# BOTTOM-RIGHT: Box plot of body mass by island\n",
+        "# ============================================================================\n",
+        "print(\"4. Creating box plot (body mass by island)...\")\n",
+        "\n",
+        "sns.boxplot(x='island',\n",
+        "            y='body_mass_g',\n",
+        "            data=penguins,\n",
+        "            ax=axes[1, 1],\n",
+        "            palette='Set3')\n",
+        "\n",
+        "axes[1, 1].set_xlabel('Island', fontsize=11)\n",
+        "axes[1, 1].set_ylabel('Body Mass (g)', fontsize=11)\n",
+        "axes[1, 1].set_title('Body Mass Distribution by Island', fontsize=12, fontweight='bold')\n",
+        "\n",
+        "# ============================================================================\n",
+        "# FINAL TOUCHES\n",
+        "# ============================================================================\n",
+        "\n",
+        "# Add an overall title for the entire figure\n",
+        "fig.suptitle('Penguin Dataset: Multi-Plot Analysis', fontsize=16, fontweight='bold', y=0.995)\n",
+        "\n",
+        "# Adjust spacing between subplots to prevent overlap\n",
+        "plt.tight_layout()\n",
+        "\n",
+        "# Display the plot\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "QHEMQHEi8WJL"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -841,7 +1064,116 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Load the penguins dataset from seaborn\n",
+        "penguins = sns.load_dataset('penguins')\n",
+        "\n",
+        "print(\"Creating a 2x2 grid with 4 different visualizations...\")\n",
+        "print()\n",
+        "\n",
+        "# ============================================================================\n",
+        "# CREATE THE 2x2 SUBPLOT GRID\n",
+        "# ============================================================================\n",
+        "\n",
+        "# Create a figure with 2 rows and 2 columns of subplots\n",
+        "fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
+        "\n",
+        "# ============================================================================\n",
+        "# TOP-LEFT: Bar plot of body mass by species\n",
+        "# ============================================================================\n",
+        "print(\"1. Creating bar plot (body mass by species)...\")\n",
+        "\n",
+        "sns.barplot(x='species',\n",
+        "            y='body_mass_g',\n",
+        "            data=penguins,\n",
+        "            ax=axes[0, 0],\n",
+        "            palette='Set2')\n",
+        "\n",
+        "axes[0, 0].set_xlabel('Species', fontsize=11)\n",
+        "axes[0, 0].set_ylabel('Body Mass (g)', fontsize=11)\n",
+        "axes[0, 0].set_title('Average Body Mass by Species', fontsize=12, fontweight='bold')\n",
+        "\n",
+        "# ============================================================================\n",
+        "# TOP-RIGHT: Scatter plot of bill length vs bill depth (colored by species)\n",
+        "# ============================================================================\n",
+        "print(\"2. Creating scatter plot (bill length vs bill depth by species)...\")\n",
+        "\n",
+        "sns.scatterplot(data=penguins,\n",
+        "                x='bill_length_mm',\n",
+        "                y='bill_depth_mm',\n",
+        "                hue='species',           # Color by species\n",
+        "                palette='Set2',\n",
+        "                s=100,                   # Size of points\n",
+        "                alpha=0.7,\n",
+        "                ax=axes[0, 1])\n",
+        "\n",
+        "axes[0, 1].set_xlabel('Bill Length (mm)', fontsize=11)\n",
+        "axes[0, 1].set_ylabel('Bill Depth (mm)', fontsize=11)\n",
+        "axes[0, 1].set_title('Bill Length vs Bill Depth by Species', fontsize=12, fontweight='bold')\n",
+        "axes[0, 1].legend(title='Species')\n",
+        "\n",
+        "# ============================================================================\n",
+        "# BOTTOM-LEFT: Histogram of flipper length (separated by species)\n",
+        "# ============================================================================\n",
+        "print(\"3. Creating histogram (flipper length distribution by species)...\")\n",
+        "\n",
+        "sns.histplot(data=penguins,\n",
+        "             x='flipper_length_mm',\n",
+        "             hue='species',              # Separate by species\n",
+        "             palette='Set2',\n",
+        "             multiple='stack',           # Stack the histograms\n",
+        "             bins=20,                    # Number of bins\n",
+        "             ax=axes[1, 0])\n",
+        "\n",
+        "axes[1, 0].set_xlabel('Flipper Length (mm)', fontsize=11)\n",
+        "axes[1, 0].set_ylabel('Count', fontsize=11)\n",
+        "axes[1, 0].set_title('Flipper Length Distribution by Species', fontsize=12, fontweight='bold')\n",
+        "axes[1, 0].legend(title='Species')\n",
+        "\n",
+        "# ============================================================================\n",
+        "# BOTTOM-RIGHT: Box plot of body mass by island\n",
+        "# ============================================================================\n",
+        "print(\"4. Creating box plot (body mass by island)...\")\n",
+        "\n",
+        "sns.boxplot(x='island',\n",
+        "            y='body_mass_g',\n",
+        "            data=penguins,\n",
+        "            ax=axes[1, 1],\n",
+        "            palette='Set3')\n",
+        "\n",
+        "axes[1, 1].set_xlabel('Island', fontsize=11)\n",
+        "axes[1, 1].set_ylabel('Body Mass (g)', fontsize=11)\n",
+        "axes[1, 1].set_title('Body Mass Distribution by Island', fontsize=12, fontweight='bold')\n",
+        "\n",
+        "# Add an overall title for the entire figure\n",
+        "fig.suptitle('Penguin Dataset: Multi-Plot Analysis', fontsize=16, fontweight='bold', y=0.995)\n",
+        "\n",
+        "# Adjust spacing between subplots to prevent overlap\n",
+        "plt.tight_layout()\n",
+        "\n",
+        "\n",
+        "plt.savefig('penguin_analysis.png', dpi=150, bbox_inches='tight')\n",
+        "print(\"\\n✅ Figure saved as 'penguin_analysis.png' at 150 dpi\")\n",
+        "\n",
+        "# Display the plot\n",
+        "plt.show()\n",
+        "\n",
+        "from google.colab import files\n",
+        "files.download('penguin_analysis.png')\n",
+        "print(\"📥 File downloaded to your computer!\")\n",
+        "\n",
+        "print(\"\\n✅ Task 5 complete!\")\n",
+        "print(\"You should see a 2x2 grid with:\")\n",
+        "print(\"  - Top-left: Bar plot\")\n",
+        "print(\"  - Top-right: Scatter plot\")\n",
+        "print(\"  - Bottom-left: Histogram\")\n",
+        "print(\"  - Bottom-right: Box plot\")\n",
+        "print(\"\\nThe PNG file should be downloading to your Downloads folder!\")\n"
+      ],
       "metadata": {
         "id": "5bEgUNO3KN7z"
       },
