--- a/Week7.ipynb
+++ b/Week7.ipynb
@@ -1336,6 +1336,83 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Load the penguins dataset from seaborn\n",
+        "penguins = sns.load_dataset('penguins')\n",
+        "\n",
+        "print(\"Creating a pie chart for penguin species distribution...\")\n",
+        "print()\n",
+        "\n",
+        "# ============================================================================\n",
+        "# STEP 1: Count how many penguins belong to each species\n",
+        "# ============================================================================\n",
+        "\n",
+        "species_counts = penguins['species'].value_counts()\n",
+        "\n",
+        "print(\"Penguin Species Counts:\")\n",
+        "print(species_counts)\n",
+        "print()\n",
+        "\n",
+        "# ============================================================================\n",
+        "# STEP 2: Set up the pie chart parameters\n",
+        "# ============================================================================\n",
+        "\n",
+        "# Get the labels (species names)\n",
+        "labels = species_counts.index\n",
+        "\n",
+        "# Get the counts (number of each species)\n",
+        "sizes = species_counts.values\n",
+        "\n",
+        "# Explode the first slice (Adelie) to separate it slightly\n",
+        "# (0.1 means separate by 10%, 0 means no separation)\n",
+        "explode = (0.1, 0, 0)  # Only explode the first slice\n",
+        "\n",
+        "# Choose colors for each slice\n",
+        "colors = ['lightblue', 'lightgreen', 'coral']\n",
+        "\n",
+        "# ============================================================================\n",
+        "# STEP 3: Create the pie chart\n",
+        "# ============================================================================\n",
+        "\n",
+        "plt.figure(figsize=(8, 8))  # Make it square for a circular pie\n",
+        "\n",
+        "plt.pie(sizes,                      # The data (counts)\n",
+        "        labels=labels,              # Species names\n",
+        "        autopct='%1.1f%%',          # Show percentages with 1 decimal place\n",
+        "        startangle=90,              # Start the first slice at 90 degrees (top)\n",
+        "        explode=explode,            # Separate the first slice\n",
+        "        colors=colors,              # Custom colors\n",
+        "        shadow=True,                # Add a shadow for 3D effect (optional)\n",
+        "        textprops={'fontsize': 12}) # Font size for labels\n",
+        "\n",
+        "# ============================================================================\n",
+        "# STEP 4: Add title and make it circular\n",
+        "# ============================================================================\n",
+        "\n",
+        "plt.title('Distribution of Penguin Species', fontsize=16, fontweight='bold', pad=20)\n",
+        "\n",
+        "# Make the pie chart circular (equal aspect ratio)\n",
+        "plt.axis('equal')\n",
+        "\n",
+        "# ============================================================================\n",
+        "# STEP 5: Display the chart\n",
+        "# ============================================================================\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "MA89Ia5h-dV3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### 🏷️ K-Means Clustering on the Penguins Dataset\n",
